samples/_failures_safe/1761317434_6fe2c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0450c591.c: In function ‘main’:
./samples/SAFE/__tmp_0450c591.c:165:20: error: missing terminating " character
  165 |             printf("Invalid log
      |                    ^~~~~~~~~~~~
./samples/SAFE/__tmp_0450c591.c:165:13: error: expected expression at end of input
  165 |             printf("Invalid log
      |             ^~~~~~
./samples/SAFE/__tmp_0450c591.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0450c591.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0450c591.c:165:13: error: expected declaration or statement at end of input
